syntax = "proto3";

package com.jambalaya.example;

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;

service PaymentMethodService {
  rpc findOne (FindRequest) returns (PaymentMethod);

  rpc create (PaymentMethodInput) returns (PaymentMethod);
}

message FindRequest {
  repeated Criteria criteria = 1;

  message Criteria {
    repeated uint64 id = 1;
    repeated string name = 2;
    repeated PaymentMethodCardBrand brand = 3;
  }
}

message PaymentMethodInput {
  PaymentMethodCardInput card = 2;
}

message PaymentMethodCardInput {
  google.protobuf.StringValue number = 1;
  google.protobuf.UInt32Value expiration_year = 2;
  google.protobuf.UInt32Value expiration_month = 3;
  google.protobuf.StringValue card_holder_name = 4;
}

message PaymentMethod {
  uint64 id = 1;
  string stripe_payment_method_id = 3;
  PaymentMethodCard card = 4;
}

message PaymentMethodCard {
  PaymentMethodCardBrand brand = 1;
  string number = 2;
  uint32 expiration_year = 3;
  uint32 expiration_month = 4;
  string card_holder_name = 5;
  repeated AccountUpdaterLog updater_log = 6;
  optional string description = 7;
}

message AccountUpdaterLog {
  string message = 1;
}

enum PaymentMethodCardBrand {
  PAYMENT_METHOD_CARD_BRAND_UNSPECIFIED = 0;
  PAYMENT_METHOD_CARD_BRAND_VISA = 1;
  PAYMENT_METHOD_CARD_BRAND_MASTERCARD = 2;
  PAYMENT_METHOD_CARD_BRAND_AMERICAN_EXPRESS = 3;
}
